[package]
name = "tendermint-lightclient"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ibc-core = "0.53.0"
ibc-client-tendermint = "0.53.0"

[dev-dependencies]
tendermint = "0.36.0"
tendermint-testgen = "0.36.0"
prost = "0.12.6"
